fix- spacing

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ button {
     color: white;
     position: absolute; 
     right: 0; 
-    bottom: 50px; 
+    bottom: 60px; 
     padding: 20px;
 }
 
